# python_cpp_grpc_example

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .style.yapf  LICENSE  README.md  mypy.ini  requirements.txt  tox.ini
.github/workflows/: main.yml
dockerfiles/: Dockerfile  Dockerfile.client  Dockerfile.server
libs/arithmetic/: CMakeLists.txt
libs/arithmetic/include/arithmetic/: arithmetic.h
libs/arithmetic/tests/: CMakeLists.txt  arithmetic_test.cc
libs/arithmetic_grpc/: CMakeLists.txt
libs/arithmetic_grpc/apps/: CMakeLists.txt  arithmetic_server.cc  average_server.cc  interactive_average_client.cc  interactive_max_client.cc  interactive_prime_client.cc  interactive_sum_client.cc  max_server.cc  prime_server.cc  sum_server.cc
libs/arithmetic_grpc/include/arithmetic_grpc/: arithmetic_grpc.h  average_client.h  average_service.h  grpc_utils.h  max_client.h  max_service.h  prime_client.h  prime_service.h  sum_client.h  sum_service.h
libs/arithmetic_grpc/src/: CMakeLists.txt  average_client.cc  average_service.cc  max_client.cc  max_service.cc  prime_client.cc  prime_service.cc  sum_client.cc  sum_service.cc
libs/arithmetic_grpc/tests/: CMakeLists.txt  average_server_client_test.cc  max_server_client_test.cc  prime_server_client_test.cc  sum_server_client_test.cc
libs/arithmetic_proto/: CMakeLists.txt  setup.py
libs/arithmetic_proto/arithmetic_proto/: average.proto  max.proto  prime.proto  sum.proto
libs/arithmetic_python_client/: requirements.txt  setup.py
libs/arithmetic_python_client/apps/: interactive_average_client.py  interactive_max_client.py  interactive_prime_client.py  interactive_sum_client.py
libs/arithmetic_python_client/arithmetic_python_client/: __init__.py  average_client.py  future.py  max_client.py  prime_client.py  python_client.py  server_stream_handler.py  sum_client.py  utils.py
libs/arithmetic_python_client/pytest/: conftest.py  test_average_client.py  test_max_client.py  test_prime_client.py  test_python_client.py  test_sum_client.py  test_utils.py  testing_helpers.py
scripts/: build_docker_client.sh  build_docker_images.sh  build_docker_server.sh  initialise_python_environment.sh  install_grpc.sh  launch_dockerized_arithmetic_server.sh  launch_dockerized_cpp_grpc_arithmetic_server.sh  launch_dockerized_interactive_arithmetic_client.sh  launch_interactive_python_client.sh
